# serializer version: 1
# name: test_light_snapshot[light.another_test_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 7000,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 142,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.another_test_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00055511EECC-2-12',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_snapshot[light.another_test_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 270,
      'color_temp_kelvin': 3700,
      'friendly_name': 'Another Test Light',
      'hs_color': tuple(
        26.996,
        40.593,
      ),
      'max_color_temp_kelvin': 7000,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 142,
      'rgb_color': tuple(
        255,
        198,
        151,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.44,
        0.371,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.another_test_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_snapshot[light.test_light_light_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 500,
      'max_mireds': 6535,
      'min_color_temp_kelvin': 153,
      'min_mireds': 2000,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_light_light_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light 1',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'light_instance',
    'unique_id': '00055511EECC-1-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_snapshot[light.test_light_light_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.HS: 'hs'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Test Light Light 1',
      'hs_color': tuple(
        35.556,
        52.941,
      ),
      'max_color_temp_kelvin': 500,
      'max_mireds': 6535,
      'min_color_temp_kelvin': 153,
      'min_mireds': 2000,
      'rgb_color': tuple(
        255,
        200,
        120,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.464,
        0.402,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.test_light_light_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_snapshot[light.test_light_light_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 4000,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 250,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_light_light_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light 2',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'light_instance',
    'unique_id': '00055511EECC-1-5',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_snapshot[light.test_light_light_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'Test Light Light 2',
      'hs_color': None,
      'max_color_temp_kelvin': 4000,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 250,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_light_light_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_light_snapshot[light.test_light_light_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_light_light_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light 3',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'light_instance',
    'unique_id': '00055511EECC-1-9',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_snapshot[light.test_light_light_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 102,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Test Light Light 3',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_light_light_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_snapshot[light.test_light_light_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_light_light_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light 4',
    'platform': 'homee',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'light_instance',
    'unique_id': '00055511EECC-1-11',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_snapshot[light.test_light_light_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Test Light Light 4',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.test_light_light_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
